// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostPublishButtonOrToggle should render a button when post is not (1), (2), (3), the viewport is >= medium, and the publish sidebar is disabled 1`] = `
<WithSelect(WithDispatch(PostPublishButton))
  isToggle={false}
/>
`;

exports[`PostPublishButtonOrToggle should render a button when the post is pending and cannot be published but the viewport is >= medium (3) 1`] = `
<WithSelect(WithDispatch(PostPublishButton))
  isToggle={false}
/>
`;

exports[`PostPublishButtonOrToggle should render a button when the post is published (1) 1`] = `
<WithSelect(WithDispatch(PostPublishButton))
  isToggle={false}
/>
`;

exports[`PostPublishButtonOrToggle should render a button when the post is scheduled (2) 1`] = `
<WithSelect(WithDispatch(PostPublishButton))
  isToggle={false}
/>
`;

exports[`PostPublishButtonOrToggle should render a toggle when post is not (1), (2), (3), the viewport is >= medium, and the publish sidebar is enabled 1`] = `
<WithSelect(WithDispatch(PostPublishButton))
  isToggle={true}
/>
`;
